Bug 99653 - [SKL][IGT] kms_plane_lowres subtest crash
Summary: [SKL][IGT] kms_plane_lowres subtest crash
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-02 16:36 UTC by Rami
Modified: 2017-07-24 22:39 UTC (History)
2 users (show)

See Also:
i915 platform: SKL
i915 features: display/atomic


Attachments
dmesg (252.23 KB, text/x-log)
2017-02-02 16:36 UTC, Rami
no flags Details
crtc readout fix (1.65 KB, patch)
2017-02-16 10:08 UTC, Mika Kahola
no flags Details | Splinter Review

Description Rami 2017-02-02 16:36:14 UTC
Created attachment 129300 [details]
dmesg

Subtests kms_plane_lowres crash on SKL with last setup:

setup:
=========
Platform SKL Gigabyte
CPU: Intel(R) Core(TM) i5-6600 CPU @ 3.30GHz (family 6, model 94, stepping 3)
GPU: Intel® HD Graphics 530 - Intel Corporation Sky Lake Integrated Graphics
(rev 06)
Motherboard version: H170N-WIFI-CF
Memory: 2x 4GB Kingston 9905622-055.A00G

Software
===========
Bios: F3
Linux distribution: Ubuntu 16.04 64 bits
DMC 1.26 from https://01.org/sites/default/files/downloads/intelr-graphics-linux/skldmcver126.tar_1.bz2
GUC 6.1 from https://01.org/sites/default/files/downloads/intelr-graphics-linux/sklgucver61.tar.bz2
Kernel: drm-tip: 2017y-01m-30d-21h-14m-37s UTC integration manifest
commit 123d798c350471aba7e0625c154c6d9e395756c8
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:  Mon Jan 30 21:15:12 2017 +0000
drm:libdrm-2.4.75-3-gd4b8344 from git://anongit.freedesktop.org/mesa/drm
mesa: mesa-13.0.3-bec04114 from git://anongit.freedesktop.org/mesa/mesa
cairo:1.15.4-68bbb693 from git://anongit.freedesktop.org/cairo
xserver: xorg-server-1.19.0-66-ga6fcb15 from git://git.freedesktop.org/git/xorg/xserver
xf86-video-intel: 2.99.917-750-g2d6f2e8 from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
libva:  libva-1.7.3.pre1-48-ge677ad9 from git://git.freedesktop.org/git/vaapi/libva
vaapi-intel-driver: 1.7.3-287-g05d2d25 from git://git.freedesktop.org/git/vaapi/intel-driver
intel-gpu-tool:intel-gpu-tools-1.17-162-g7b9499f

Actual results:
===============
sudo ./kms_plane_lowres --r pipe-C-tiling-none --debug
IGT-Version: 1.17-ga2fa75c (x86_64) (Linux: 4.10.0-rc6-tip-201702010159+ x86_64)
(kms_plane_lowres:29486) igt-core-DEBUG: Test requirement passed: !igt_run_in_simulation()
(kms_plane_lowres:29486) drmtest-DEBUG: Test requirement passed: !(fd<0)
(kms_plane_lowres:29486) drmtest-DEBUG: Test requirement passed: drmSetMaster(fd) == 0
(kms_plane_lowres:29486) igt-kms-DEBUG: VT: graphics mode set (mode was 0x0)
(kms_plane_lowres:29486) igt-kms-DEBUG: display: init {
(kms_plane_lowres:29486) igt-kms-DEBUG: display: }
(kms_plane_lowres:29486) igt-core-DEBUG: Starting subtest: pipe-C-tiling-none
(kms_plane_lowres:29486) DEBUG: Test requirement passed: data->display.is_atomic
(kms_plane_lowres:29486) DEBUG: Test requirement passed: !(pipe >= data->display.n_pipes)
Testing connector HDMI-A-2 using pipe C
(kms_plane_lowres:29486) igt-debugfs-DEBUG: Using generic frame CRC ABI
(kms_plane_lowres:29486) igt-kms-DEBUG: display: HDMI-A-2: set_pipe(C)
(kms_plane_lowres:29486) igt-kms-DEBUG: display: HDMI-A-2: Selecting pipe C
(kms_plane_lowres:29486) igt-kms-DEBUG: Test requirement passed: !(fid == NULL)
Received signal SIGSEGV.
Stack trace: 
 #0 [fatal_sig_handler+0x116]
 #1 [killpg+0x40]
 #2 [kmstest_get_crtc+0x11f]
 #3 [test_plane_position_with_output.constprop.6+0x88]
 #4 [test_plane_position.constprop.5+0xf3]
 #5 [run_tests_for_pipe.constprop.4+0x15a]
 #6 [__real_main327+0x99]
 #7 [_start+0x0]
 #8 [__libc_start_main+0xf0]
 #9 [_start+0x29]
 #10 [<unknown>+0x29]
Subtest pipe-C-tiling-none: CRASH (0.005s)
(kms_plane_lowres:29486) igt-core-DEBUG: Exiting with status code 139
(kms_plane_lowres:29486) igt-kms-DEBUG: VT: original mode 0x0 restored
Comment 1 Mika Kahola 2017-02-15 11:36:37 UTC
The tests has been updated and now this test supports dynamic planes. I would ask you to rerun this test with the latest IGT tools to verify that the memory handling in dynamic planes work ok.
Comment 2 Rami 2017-02-15 14:50:25 UTC
I can reproduce this bug with last igt: intel-gpu-tools-1.17-240-gca2ba4
Comment 3 Mika Kahola 2017-02-16 10:08:19 UTC
Created attachment 129662 [details] [review]
crtc readout fix

Please test the subtest  'kms_plane_lowres --r pipe-C-tiling-none' with this patch applied. This fixes issue that was found when reading out crtc information.
Comment 4 Rami 2017-02-16 13:42:19 UTC
Not reproduced with patch applied.
Comment 5 Mika Kahola 2017-02-17 08:19:39 UTC
Thanks for reporting. Patch has now pushed upstream


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.